--- a/sass/style.css
+++ b/sass/style.css
@@ -678,7 +678,7 @@ body {
             flex: 0.2;
   }
   .header-menu__btn {
-    display: block;
+    display: block !important;
     margin: 0 auto;
   }
   .header-indent {
@@ -721,11 +721,12 @@ body {
     line-height: 50px;
   }
   main {
-    height: 100%;
+    height: 100% !important;
     padding-top: 60px;
     padding-bottom: 50px;
   }
   main .main-content {
+    height: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -735,7 +736,7 @@ body {
             align-items: center;
   }
   main .main-content__title {
-    margin-top: 50px;
+    margin-top: 0px;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
@@ -751,8 +752,7 @@ body {
     font-weight: 700;
   }
   main .form {
-    margin-top: 25px;
-    padding-bottom: 25px;
+    margin-top: 25px !important;
     width: 90%;
   }
   .service-present {
@@ -828,7 +828,7 @@ body {
   .contacts-map {
     width: 300px !important;
     height: 300px !important;
-    margin: 50px auto;
+    margin: 50px auto !important;
   }
   .event-present {
     padding-bottom: 50px;
