--- a/sass/style.sass
+++ b/sass/style.sass
@@ -78,7 +78,7 @@ body
         &-menu
             flex: 0.2
             &__btn
-                display: block
+                display: block !important
                 margin: 0 auto
         &-indent
             display: none
@@ -105,14 +105,15 @@ body
                     font-size: 2em
                     line-height: 50px
     main
-        height: 100%
+        height: 100% !important
         padding-top: 60px
         padding-bottom: 50px
         .main-content
+            height: 100%
             flex-direction: column
             align-items: center
             &__title
-                margin-top: 50px
+                margin-top: 0px
                 flex: 1
                 text-align: center
                 h1
@@ -122,8 +123,7 @@ body
                 big
                     font-weight: 700
         .form
-            margin-top: 25px
-            padding-bottom: 25px
+            margin-top: 25px !important
             width: 90%
     .service-present
         padding-bottom: 125px
@@ -169,7 +169,7 @@ body
         &-map 
             width: 300px !important
             height: 300px !important
-            margin: 50px auto   
+            margin: 50px auto !important  
     .event-present
         padding-bottom: 50px
         .event-title
