--- a/sass/_service.sass
+++ b/sass/_service.sass
@@ -14,19 +14,20 @@
 	justify-content: space-between
 	align-items: center
 .service-content
+	position: relative
 	height: 150px	
 	flex-basis: 49%
 	margin-top: 20px
 	background-color: #fff
 	@include dark-text	
 	&__image
-		position: relative
+		position: absolute
 		float: left
 		width: 75px
 		height: 75px
-		margin-left: 5px
-		margin-top: 35px
-
+		left: 5px
+		top: 50%
+		transform: translateY(-50%)
 	&__title
 		text-align: center
 		font-weight: 700
