--- a/sass/style.css
+++ b/sass/style.css
@@ -240,6 +240,7 @@ main .main-content .form {
 }
 
 .service-content {
+  position: relative;
   height: 150px;
   -ms-flex-preferred-size: 49%;
       flex-basis: 49%;
@@ -249,12 +250,14 @@ main .main-content .form {
 }
 
 .service-content__image {
-  position: relative;
+  position: absolute;
   float: left;
   width: 75px;
   height: 75px;
-  margin-left: 5px;
-  margin-top: 35px;
+  left: 5px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .service-content__title {
@@ -774,13 +777,15 @@ body {
   .service-content-box .service-content__image {
     width: 50px;
     height: 50px;
+    float: none;
   }
   .service-content-box .service-content__title {
-    margin-top: 10px;
-    text-align: left;
+    margin: 0px auto;
+    text-align: center;
   }
   .service-content-box .service-content__txt {
-    margin: 10px 0 20px 60px;
+    margin: 10px 0px 20px 60px !important;
+    border: 2px solid red;
   }
   .event {
     padding-bottom: 75px;
