--- a/sass/style.sass
+++ b/sass/style.sass
@@ -136,11 +136,13 @@ body
             &__image
                 width: 50px
                 height: 50px
+                float: none
             &__title
-                margin-top: 10px
-                text-align: left
+                margin: 0px auto
+                text-align: center
             &__txt
-                margin: 10px 0 20px 60px
+                margin:10px 0px 20px 60px !important
+                border: 2px solid red
     .event
         padding-bottom: 75px
     .soft-present
